# apt-ostree

./: .yamllint  README.md  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
apt_ostree/: apt.py  bootstrap.py  compose.py  constants.py  deploy.py  exceptions.py  ostree.py  packages.py  rebase.py  repo.py  utils.py
apt_ostree/cmd/: __init__.py  install.py  options.py  upgrade.py
apt_ostree/cmd/compose/: __init__.py  commit.py  install.py  pull_local.py  rollback.py  upgrade.py
apt_ostree/cmd/repo/: add.py  init.py  list.py  remove.py
config/debian/bookworm/: bootstrap.yaml
config/debian/bullseye/: bootstrap.yaml
config/debian/trixie/: bootstrap.yaml
config/debian/trixie/image/: image.yaml
config/debian/trixie/image/scripts/: setup-uefi-bootloader.sh
debian/: changelog  control  copyright
doc/: requirements.txt
docker/: Dockerfile
releasenotes/source/: conf.py
