[metadata]
name = apt-ostree
summary = Hybrid image/package management system
description-file =
    README.md
author = Ivan
author-email = ivanucherdjiev@gmail.com
home-page = https://github.com/Des-OS/apt-ostree
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[entry_points]
console_scripts = 
	apt-ostree = apt_ostree.cmd.shell:main

[files]
packages =
    apt_ostree
